force-app/main/default/objects/WorkType/fields/Always_needs_review__c.field-meta.xml
<CustomField>
    <fullName>Always_needs_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always needs review</label>
    <type>Checkbox</type>
</CustomField>