force-app/main/default/objects/WorkType/fields/Available_for_RAR__c.field-meta.xml
<CustomField>
    <fullName>Available_for_RAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for RAR</label>
    <type>Checkbox</type>
</CustomField>