force-app/main/default/objects/WorkType/fields/Max_Labour__c.field-meta.xml
<CustomField>
    <fullName>Max_Labour__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Max labour allowed for this work type (in min)</inlineHelpText>
    <label>Max Labour</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>