force-app/main/default/objects/WorkType/fields/MSN_ActivityCode__c.field-meta.xml
<CustomField>
    <fullName>MSN_ActivityCode__c</fullName>
    <description>Used to capture the Activity Code in EAM that is related to this Work Type (eg WMTPMR).</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the equivalent &quot;Activity Code&quot; from EAM that relates to this Work Type (eg WMTPMR).</inlineHelpText>
    <label>Activity Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>