force-app/main/default/objects/WorkType/fields/MSN_AutoSchedule_ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>MSN_AutoSchedule_ServiceAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if a Service Appointment should be &quot;auto-scheduled&quot; when &quot;auto-create service appointment&quot; is ticked on the Work Type. This checkbox uses the Record Triggered Flow &quot;MSN - Service Appointment - Record-Triggered Updates&quot; to update the checkbox &quot;Auto-Schedule&quot; on the Service Appointment Record</description>
    <inlineHelpText>Please tick this checkbox in order to auto-schedule new Service Appointments that get auto-created from the Work Type.</inlineHelpText>
    <label>Auto-Schedule Service Appointment</label>
    <type>Checkbox</type>
</CustomField>