force-app/main/default/objects/WorkType/fields/MSN_Crew__c.field-meta.xml
<CustomField>
    <fullName>MSN_Crew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSN Crew</label>
    <type>Checkbox</type>
</CustomField>