force-app/main/default/objects/WorkType/fields/MSN_Default_Asset__c.field-meta.xml
<CustomField>
    <fullName>MSN_Default_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to define a default &quot;Dummy&quot; Asset for a Work Type in case no distinct Asset can be linked to a job. This is used esp. in mobile flows when a new Work Order of ancillary Work Types such as Reinstatement or RARs are created. This is required, as EAM demands an Asset/Compkey in the payload that creates a new Child Work Order.</description>
    <inlineHelpText>Dummy Asset to be used for ancillary Work Types</inlineHelpText>
    <label>Default Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>