force-app/main/default/objects/WorkType/fields/MSN_Is_Reinstatement_Markout__c.field-meta.xml
<CustomField>
    <fullName>MSN_Is_Reinstatement_Markout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please ONLY tick this on the Work Type &quot;Reinstatement - Markout&quot;. This determines the start of the Hard Surface reinstatement process and is required to give field crew the correct options to choose from in the Mobile App.</description>
    <inlineHelpText>Please ONLY tick this on the Work Type &quot;Reinstatement - Markout&quot;. This determines the start of the Hard Surface reinstatement process and is required to give field crew the correct options to choose from in the Mobile App.</inlineHelpText>
    <label>Is Markout Work Type</label>
    <type>Checkbox</type>
</CustomField>