force-app/main/default/objects/WorkType/fields/MSN_NoOfAllowedAssetTypes__c.field-meta.xml
<CustomField>
    <fullName>MSN_NoOfAllowedAssetTypes__c</fullName>
    <description>Count the Number of the records on the related master-detail &quot;Allowed Asset Types&quot; object</description>
    <label># Allowed Asset Types</label>
    <summaryForeignKey>MSN_AllowedAssetTypes__c.MSN_Work_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>