force-app/main/default/objects/WorkType/fields/MSN_Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Problem_Code__c</fullName>
    <description>Problem Codes are used for Reactive Work and are a unique identifier for a specific problem that a field crew found during a reactive work type.</description>
    <externalId>true</externalId>
    <label>Problem Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>