force-app/main/default/objects/WorkType/fields/MSN_Reinstatement__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the Work Type is a &quot;Reinstatement&quot; type of work</description>
    <inlineHelpText>Please tick this, if the work is of the type &quot;Reinstatement&quot;. This is required to give mobile field crew the correct options to choose from when they use the &quot;Update Job Status&quot; action</inlineHelpText>
    <label>Is Reinstatement Work Type</label>
    <type>Checkbox</type>
</CustomField>