force-app/main/default/objects/WorkType/fields/MSN_Service_Restore_Required__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Restore_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to define whether a specific Work Type requires a &quot;Service Restore&quot; before the mobile field crew is allowed to complete the job. This is validated in the Field Service Mobile App in the &quot;Update Job Status&quot; Flow.</description>
    <inlineHelpText>Select if this work type requires a &quot;Service Restore&quot; before the mobile field crew is allowed to complete the job.</inlineHelpText>
    <label>Service Restore Required</label>
    <type>Checkbox</type>
</CustomField>