force-app/main/default/objects/WorkType/fields/MSN_TypeOfWork__c.field-meta.xml
<CustomField>
    <fullName>MSN_TypeOfWork__c</fullName>
    <description>Used to differentiate &quot;Planned&quot; and &quot;Reactive&quot; work types</description>
    <inlineHelpText>Used to differentiate &quot;Planned&quot; and &quot;Reactive&quot; work types</inlineHelpText>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>