force-app/main/default/objects/WorkType/fields/Must_have_parts__c.field-meta.xml
<CustomField>
    <fullName>Must_have_parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must have parts</label>
    <type>Checkbox</type>
</CustomField>