force-app/main/default/objects/WorkType/fields/Planned_Work__c.field-meta.xml
<CustomField>
    <fullName>Planned_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://watercarestp.atlassian.net/browse/MSRS-78</description>
    <label>Planned Work</label>
    <type>Checkbox</type>
</CustomField>