force-app/main/default/objects/WorkType/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cartage/ Hiab Wastewater</fullName>
            </value>
            <value>
                <fullName>Cartage/ Hiab Water</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Electrician/Technician Subcontractor</fullName>
            </value>
            <value>
                <fullName>Expose Concrete - Reinstatement Wash Down</fullName>
            </value>
            <value>
                <fullName>Hydro Excavator Large - Wastewater</fullName>
            </value>
            <value>
                <fullName>Hydro Excavator Large - Water</fullName>
            </value>
            <value>
                <fullName>Hydro Excavator Small - Wastewater</fullName>
            </value>
            <value>
                <fullName>Hydro Excavator Small - Water</fullName>
            </value>
            <value>
                <fullName>Leak Detection</fullName>
            </value>
            <value>
                <fullName>Planned Water Crew (1 Man)</fullName>
            </value>
            <value>
                <fullName>Pumpstation Uate (1 Man)</fullName>
            </value>
            <value>
                <fullName>Reinstatement - Pavers</fullName>
            </value>
            <value>
                <fullName>Reinstatement - Perm Concrete</fullName>
            </value>
            <value>
                <fullName>Reinstatement - Perm Hotmix</fullName>
            </value>
            <value>
                <fullName>Reinstatement - Perm Topsoil</fullName>
            </value>
            <value>
                <fullName>Steel Plates - Drainage</fullName>
            </value>
            <value>
                <fullName>Steel Plates - Reinstatement</fullName>
            </value>
            <value>
                <fullName>Steel Plates - Water</fullName>
            </value>
            <value>
                <fullName>Sucker Truck - Wastewater related works</fullName>
            </value>
            <value>
                <fullName>Sucker Truck - Water related works</fullName>
            </value>
            <value>
                <fullName>Traffic Mgmt - Reinstatement Works</fullName>
            </value>
            <value>
                <fullName>Traffic Mgmt - Wastewater Works</fullName>
            </value>
            <value>
                <fullName>Traffic Mgmt - Water Works</fullName>
            </value>
            <value>
                <fullName>Wastewater Crew (1 Man)</fullName>
            </value>
            <value>
                <fullName>Wastewater Dig Up Crew</fullName>
            </value>
            <value>
                <fullName>Wastewater Jetter Truck</fullName>
            </value>
            <value>
                <fullName>Water Reactive Crew (1 Man)</fullName>
            </value>
            <value>
                <fullName>Water Reactive Crew (Class 2 Large Truck)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>