force-app/main/default/objects/WorkType/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSN_Service_Area</valueSetName>
    </valueSet>
</CustomField>