force-app/main/default/objects/WorkType/fields/Sub_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Contractor</label>
    <type>Checkbox</type>
</CustomField>