force-app/main/default/objects/WorkType/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <description>What is the type of work type. Is it RAR work types or activity codes work types</description>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RAR</fullName>
            </value>
            <value>
                <fullName>Activity Code</fullName>
            </value>
            <value>
                <fullName>Re-Instatement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>