force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <columns>Name</columns>
    <columns>MSN_ActivityCode__c</columns>
    <columns>MSN_Problem_Code__c</columns>
    <columns>Service_Area__c</columns>
    <columns>MSN_TypeOfWork__c</columns>
    <columns>MSN_Default_Asset__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>CreatedDate</columns>
    <columns>Description</columns>
    <columns>MSN_NoOfAllowedAssetTypes__c</columns>
    <columns>Available_for_RAR__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <columns>MSN_AutoSchedule_ServiceAppointment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MSN_Default_Asset__c</field>
        <operation>equals</operation>
        <value>Ancillary Services - DUMMY - Central Status</value>
    </filters>
    <label>All Work Types</label>
</ListView>