force-app/main/default/objects/WorkType/listViews/Available_for_RAR.listView-meta.xml
<ListView>
    <fullName>Available_for_RAR</fullName>
    <columns>Name</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>Service_Area__c</columns>
    <columns>Sub_Contractor__c</columns>
    <columns>MSN_Crew__c</columns>
    <columns>Available_for_RAR__c</columns>
    <columns>FSL__Due_Date_Offset__c</columns>
    <columns>MSN_Default_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_for_RAR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Available for RAR</label>
</ListView>